Fixed scroll bar shift when locking scroll for <Modal/>

--- a/client/src/core/assets/main.scss
+++ b/client/src/core/assets/main.scss
@@ -49,6 +49,7 @@ body {
 	font-weight: 400;
 	font-family: var(--font);
 	font-style: normal;
+	overflow: overlay;
 }
 h1 {
 	font-size: 42px;
